--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@chakra-ui/react": "^1.6.6",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "date-fns": "^2.23.0",
     "firebase": "^8.9.0",
     "firebase-admin": "^9.11.0",
     "framer-motion": "^4.1.17",
     "next": "10.x",
     "react": "17.x",
     "react-dom": "17.x",
-    "react-hook-form": "^7.12.2"
+    "react-hook-form": "^7.12.2",
+    "swr": "^0.5.6"
   }
 }
